# faculty-agent

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  schema.json
src/facultyai/: __init__.py  __main__.py  cache.py  chat.py  cli.py  config.py  database.py  exporter.py  input_manager.py  llm_factory.py  lock_manager.py  logging_config.py  orchestrator.py  schema.py  scraper_graph.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_config.py  test_database.py  test_exporter.py  test_input_manager.py  test_llm_factory.py  test_lock_manager.py  test_schema.py  test_scraper_graph.py
